Sling Performance enhancements according to FindBug and JavaDoc: Instead of calling the constructors the valueOf() methods should be called.
git-svn-id: https://svn.apache.org/repos/asf/incubator/sling/trunk@771222 13f79535-47bb-0310-9956-ffa450edef68